--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,18 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/briefenleed"
 
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
 # Build settings
 remote_theme: mmistakes/minimal-mistakes@4.20.2
 plugins:
