--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ defaults:
       path: ""
       type: posts
     values:
+      header:
+        image: images/banner.jpg
       layout: single
       author_profile: true
       read_time: true
