--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,10 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
+# Reading files
+include:
+  - _pages
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
