Sets the menus and the sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: "Brief en Leed"
+name: "Brief en Leed"
+description: "Echte brieven aan echte mensen"
 baseurl: "/briefenleed"
+
+author:
+  name: "Over Brief en leed"
+  bio: "Jan Ouwens en Ralf Pisters verbeteren elk weekeinde de wereld met hun brieven. Hier leest u het resultaat: soms ontroerend, vaak grappig, altijd relevant.<br><br>De brieven zijn echt verstuurd."
+  facebook: Brief-en-leed-140672505967026
 
 defaults:
   - scope:
@@ -34,6 +36,8 @@ defaults:
         image: images/banner.jpg
       layout: single
       author_profile: true
+      sidebar:
+        nav: "side"
   - scope:
       type: posts
     values:
