Adds Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,12 @@ defaults:
 comments:
   provider: custom
 
+# Analytics
+analytics:
+  provider               : google # false (default), "google", "google-universal", "custom"
+  google:
+    tracking_id          : "UA-9733313-1"
+
 # Build settings
 remote_theme: mmistakes/minimal-mistakes@4.20.2
 plugins:
