Adds assets for all internal images

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ title: "Brief en Leed"
 name: "Brief en Leed"
 description: "Echte brieven aan echte mensen"
 baseurl: "/briefenleed"
+imageurl: "/briefenleed/assets/images"
 
 author:
   name: "Over Brief en leed"
