--- a/_config.yml
+++ b/_config.yml
@@ -63,9 +63,7 @@ comments:
 
 # Analytics
 analytics:
-  provider               : google-universal # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-9733313-1"
+  provider               : # false (default), "google", "google-universal", "custom"
 
 # Build settings
 remote_theme: mmistakes/minimal-mistakes@4.20.2
