Fixes small issues

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ defaults:
   - scope:
       type: posts
     values:
-      permalink: /:year/:month/:title
+      permalink: /:year/:month/:title/
       comments: true
   - scope:
       type: pages
