Tweaks some ui texts

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -78,9 +78,9 @@ nl: &DEFAULT_NL
   share_on_label             : "Deel op"
   meta_label                 :
   tags_label                 : "Labels:"
-  categories_label           : "Categorieën:"
+  categories_label           : "Categorie:"
   date_label                 : "Bijgewerkt:"
-  comments_label             : "Laat een reactie achter"
+  comments_label             : "Opmerkingen:"
   comments_title             : "Commentaren"
   more_label                 : "Meer informatie"
   related_label              : "Bekijk ook eens"
@@ -89,7 +89,7 @@ nl: &DEFAULT_NL
   powered_by                 : "Aangedreven door"
   website_label              : "Website"
   email_label                : "Email"
-  recent_posts               : "Recente berichten"
+  recent_posts               : "Recente brieven"
   undefined_wpm              : "Niet gedefinieerde parameter words_per_minute bij _config.yml"
   comment_form_info          : "Uw e-mailadres wordt niet gepubliceerd. Verplichte velden zijn gemarkeerd"
   comment_form_comment_label : "Commentaar"
