--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 locale: "nl"
 title: "Brief en Leed"
+subtitle: "jqno.nl"
 name: "Brief en Leed"
 description: "Echte brieven aan echte mensen"
 baseurl: "/briefenleed"
@@ -30,6 +31,7 @@ author:
   name: "Over Brief en leed"
   bio: "Jan Ouwens en Ralf Pisters verbeteren elk weekeinde de wereld met hun brieven. Hier leest u het resultaat: soms ontroerend, vaak grappig, altijd relevant.<br><br>De brieven zijn echt verstuurd."
   facebook: Brief-en-leed-140672505967026
+  uri_author: "/briefenleed/de-auteurs"
 
 footer:
   links:
