Redirects to privacy policy on main site

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
 footer:
   links:
     - label: "Privacy policy"
-      url: "/briefenleed/privacy"
+      url: "https://jqno.nl/privacy"
 
 defaults:
   - scope:
