Integrates title with main site

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 locale: "nl"
-title: "Brief en Leed"
+title: "Brief en Leed - tr ouwens"
 subtitle: "jqno.nl"
 name: "Brief en Leed"
 description: "Echte brieven aan echte mensen"
