--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 locale: "nl"
-title: "Brief en Leed - tr ouwens"
-subtitle: "jqno.nl"
+title: "Brief en Leed"
+subtitle: "echte brieven aan echte mensen"
 name: "Brief en Leed"
-description: "Echte brieven aan echte mensen"
+description: "Brief en Leed ▷ Jan Ouwens en Ralf Pisters ▷ echte brieven aan echte mensen"
 baseurl: "/briefenleed"
 imageurl: "/briefenleed/assets/images"
 search: true
