Adds Mastodon link

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/jqno"
+    - label: "Mastodon"
+      icon: "fab fa-fw fa-mastodon"
+      url: "https://mastodon.online/@jqno"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jqno"
