Adds climate considerations

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -84,7 +84,7 @@ nl: &DEFAULT_NL
   comments_title             : "Commentaren"
   more_label                 : "Meer informatie"
   related_label              : "Bekijk ook eens"
-  follow_label               : "Volg:"
+  follow_label               : ""
   feed_label                 : "Feed"
   powered_by                 : "Aangedreven door"
   website_label              : "Website"
