--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,8 @@ footer:
   links:
     - label: "Privacy policy"
       url: "https://jqno.nl/privacy"
+    - label: "Climate considerations"
+      url: "/climate"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/jqno"
